modify php session path

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -4,10 +4,9 @@ pidfile=/var/run/supervisord.pid
 nodaemon=true
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm
+command=/usr/sbin/php-fpm --nodaemonize
 autostart=true
 
 [program:nginx]
 command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
 autostart=true
-
